--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,282 @@
     android:layout_height="match_parent"
     tools:context="com.itescia.compagnysimulator.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <RelativeLayout
+        android:id="@+id/RelativeLayoutPrincipal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true">
+
+                <RelativeLayout
+                    android:id="@+id/RelativeLayoutMedaille"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <ProgressBar
+                        android:id="@+id/progressBarReputation"
+                        style="?android:attr/progressBarStyleHorizontal"
+                        android:layout_width="90dp"
+                        android:layout_height="40dp"
+                        android:layout_alignParentStart="true"
+                        android:layout_marginStart="12dp"
+                        android:background="@color/colorProgressBarReputation"
+                        android:backgroundTint="@color/colorBackgroundProgressBarReputation"
+                        android:indeterminate="true"
+                        android:indeterminateTint="@color/colorProgressBarReputation"
+                        android:indeterminateTintMode="src_atop"
+                        android:max="100"
+                        android:progress="50" />
+
+                    <ImageView
+                        android:id="@+id/ImageViewReputation"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignStart="@+id/progressBarReputation"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="20dp"
+                        app:srcCompat="@drawable/medalicon"  />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/RelativeLayoutSecurite"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toEndOf="@+id/RelativeLayoutMedaille"
+                    android:layout_alignTop="@+id/RelativeLayoutMedaille"
+                    android:layout_marginStart="21dp">
+
+                    <ProgressBar
+                        android:id="@+id/progressBarSecurite"
+                        style="?android:attr/progressBarStyleHorizontal"
+                        android:layout_width="90dp"
+                        android:layout_height="40dp"
+
+                        android:background="@color/colorProgressBarSecurite"
+                        android:backgroundTint="@color/colorBackgroundProgressBarSecurite"
+                        android:indeterminate="true"
+                        android:indeterminateTint="@color/colorProgressBarSecurite"
+                        android:indeterminateTintMode="src_atop"
+                        android:max="100"
+                        android:progress="50" />
+
+                    <ImageView
+                        android:id="@+id/ImageViewSecurite"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignStart="@+id/progressBarSecurite"
+                        android:layout_centerVertical="true"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerInParent="true"
+                        android:layout_marginStart="20dp"
+                        app:srcCompat="@drawable/securityicon" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/RelativeLayoutFormation"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@+id/RelativeLayoutSecurite"
+                    android:layout_toEndOf="@+id/RelativeLayoutSecurite">
+
+                    <ProgressBar
+                        android:id="@+id/progressBarFormation"
+                        style="?android:attr/progressBarStyleHorizontal"
+                        android:layout_width="90dp"
+                        android:layout_height="40dp"
+                        android:layout_marginStart="21dp"
+                        android:background="@color/colorProgressBarFormation"
+                        android:backgroundTint="@color/colorBackgroundProgressBarFormation"
+                        android:indeterminate="true"
+                        android:indeterminateTint="@color/colorProgressBarFormation"
+                        android:indeterminateTintMode="src_atop"
+                        android:max="100"
+                        android:progress="50"/>
+
+                    <ImageView
+                        android:id="@+id/ImageViewFormation"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignEnd="@+id/progressBarFormation"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginEnd="20dp"
+                        app:srcCompat="@drawable/competenceicon" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@+id/RelativeLayoutFormation"
+                    android:layout_toEndOf="@+id/RelativeLayoutFormation">
+
+                    <ProgressBar
+                        android:id="@+id/progressBarBonheur"
+                        style="?android:attr/progressBarStyleHorizontal"
+                        android:layout_width="90dp"
+                        android:layout_height="40dp"
+                        android:layout_marginStart="21dp"
+                        android:background="@color/colorProgressBarBonheur"
+                        android:backgroundTint="@color/colorBackgroundProgressBarBonheur"
+                        android:indeterminate="true"
+                        android:indeterminateTint="@color/colorProgressBarBonheur"
+                        android:indeterminateTintMode="src_atop"
+                        android:max="100"
+                        android:progress="50"/>
+
+
+                    <ImageView
+                        android:id="@+id/ImageViewBonheur"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignStart="@+id/progressBarBonheur"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="20dp"
+                        app:srcCompat="@drawable/happinessicon" />
+                </RelativeLayout>
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/TextViewLevel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:background="@color/backgroundLevel"
+                android:clickable="true"
+                android:paddingBottom="10dp"
+                android:paddingEnd="5dp"
+                android:paddingStart="5dp"
+                android:paddingTop="10dp"
+                android:text="NIVEAU 10"
+                android:textColor="@color/fontColor"
+                android:textSize="17sp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/RelativeLayoutLevel"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <RelativeLayout
+                android:id="@+id/RelativeLayoutRessources"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="10dp">
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/RelativeLayoutArgent">
+
+                    <ImageView
+                        android:id="@+id/ImageViewArgent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginStart="10dp"
+                        android:clickable="true"
+                        android:contentDescription="Image argent"
+                        android:src="@drawable/argent" />
+
+                    <TextView
+                        android:id="@+id/TextViewArgent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignStart="@+id/ImageViewArgent"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="50dp"
+                        android:text="1000"
+                        android:textSize="20sp"
+                        android:layout_marginLeft="10dp"
+                        android:textColor="@color/fontColor"/>
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/RelativeLayoutHomme"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginStart="68dp"
+                    android:layout_toEndOf="@+id/RelativeLayoutArgent">
+
+                    <ImageView
+                        android:id="@+id/ImageViewHommes"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginStart="10dp"
+                        android:clickable="true"
+                        android:contentDescription="Image argent"
+                        android:src="@drawable/workericon" />
+
+                    <TextView
+                        android:id="@+id/TextViewHomme"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignStart="@+id/ImageViewHommes"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="50dp"
+                        android:text="12"
+                        android:textColor="@color/fontColor"
+                        android:textSize="20sp" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/RelativeLayoutRessource"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginStart="86dp"
+                    android:layout_toEndOf="@+id/RelativeLayoutHomme">
+
+                    <ImageView
+                        android:id="@+id/ImageViewRessources"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginStart="10dp"
+                        android:clickable="true"
+                        android:contentDescription="Image argent"
+                        android:src="@drawable/resourcesicon" />
+
+                    <ProgressBar
+                        android:id="@+id/ProgressBarRessources"
+                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                        android:layout_width="100dp"
+                        android:layout_height="30dp"
+                        android:layout_centerVertical="true"
+                        android:layout_toEndOf="@+id/ImageViewRessources"
+                        android:background="@color/colorBackgroundProgressBarRessource"
+                        android:backgroundTint="@color/colorBackgroundProgressBarRessource"
+                        android:indeterminate="true"
+                        android:indeterminateTint="@color/colorProgressBarRessource"
+                        android:indeterminateTintMode="src_atop"
+                        android:max="100"
+                        android:progress="50" />
+
+                </RelativeLayout>
+
+                <TextView
+                    android:id="@+id/TextViewAddRessources"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="18dp"
+                    android:layout_toEndOf="@+id/RelativeLayoutRessource"
+                    android:text="+"
+                    android:textColor="@color/fontColor"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+            </RelativeLayout>
+        </RelativeLayout>
+
+    </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
