--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,28 +25,26 @@
                     android:layout_height="wrap_content">
 
                     <ProgressBar
-                        android:id="@+id/progressBarReputation"
-                        style="?android:attr/progressBarStyleHorizontal"
+                        android:id="@+id/ProgressBarReputation"
+                        style="@android:style/Widget.ProgressBar.Horizontal"
+                        android:progressDrawable="@drawable/custom_progress_bar_reputation"
                         android:layout_width="90dp"
                         android:layout_height="40dp"
                         android:layout_alignParentStart="true"
                         android:layout_marginStart="12dp"
-                        android:background="@color/colorProgressBarReputation"
-                        android:backgroundTint="@color/colorBackgroundProgressBarReputation"
-                        android:indeterminate="true"
-                        android:indeterminateTint="@color/colorProgressBarReputation"
+                        android:indeterminate="false"
                         android:indeterminateTintMode="src_atop"
                         android:max="100"
-                        android:progress="50" />
+                        android:progress="0"/>
 
                     <ImageView
                         android:id="@+id/ImageViewReputation"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignStart="@+id/progressBarReputation"
+                        android:layout_alignStart="@+id/ProgressBarReputation"
                         android:layout_centerVertical="true"
-                        android:layout_marginStart="20dp"
-                        app:srcCompat="@drawable/medalicon"  />
+                        android:layout_marginStart="25dp"
+                        app:srcCompat="@drawable/medalicon" />
                 </RelativeLayout>
 
                 <RelativeLayout
@@ -58,28 +56,25 @@
                     android:layout_marginStart="21dp">
 
                     <ProgressBar
-                        android:id="@+id/progressBarSecurite"
-                        style="?android:attr/progressBarStyleHorizontal"
+                        android:id="@+id/ProgressBarSecurite"
+                        style="@android:style/Widget.ProgressBar.Horizontal"
+                        android:progressDrawable="@drawable/custom_progress_bar_securite"
                         android:layout_width="90dp"
                         android:layout_height="40dp"
-
-                        android:background="@color/colorProgressBarSecurite"
-                        android:backgroundTint="@color/colorBackgroundProgressBarSecurite"
-                        android:indeterminate="true"
-                        android:indeterminateTint="@color/colorProgressBarSecurite"
+                        android:indeterminate="false"
                         android:indeterminateTintMode="src_atop"
                         android:max="100"
-                        android:progress="50" />
+                        android:progress="0"/>
 
                     <ImageView
                         android:id="@+id/ImageViewSecurite"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignStart="@+id/progressBarSecurite"
-                        android:layout_centerVertical="true"
+                        android:layout_alignStart="@+id/ProgressBarSecurite"
                         android:layout_centerHorizontal="true"
                         android:layout_centerInParent="true"
-                        android:layout_marginStart="20dp"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="25dp"
                         app:srcCompat="@drawable/securityicon" />
                 </RelativeLayout>
 
@@ -91,26 +86,24 @@
                     android:layout_toEndOf="@+id/RelativeLayoutSecurite">
 
                     <ProgressBar
-                        android:id="@+id/progressBarFormation"
-                        style="?android:attr/progressBarStyleHorizontal"
+                        android:id="@+id/ProgressBarFormation"
+                        style="@android:style/Widget.ProgressBar.Horizontal"
+                        android:progressDrawable="@drawable/custom_progress_bar_formation"
                         android:layout_width="90dp"
                         android:layout_height="40dp"
                         android:layout_marginStart="21dp"
-                        android:background="@color/colorProgressBarFormation"
-                        android:backgroundTint="@color/colorBackgroundProgressBarFormation"
-                        android:indeterminate="true"
-                        android:indeterminateTint="@color/colorProgressBarFormation"
+                        android:indeterminate="false"
                         android:indeterminateTintMode="src_atop"
                         android:max="100"
-                        android:progress="50"/>
+                        android:progress="0"/>
 
                     <ImageView
                         android:id="@+id/ImageViewFormation"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignEnd="@+id/progressBarFormation"
+                        android:layout_alignEnd="@+id/ProgressBarFormation"
                         android:layout_alignParentTop="true"
-                        android:layout_marginEnd="20dp"
+                        android:layout_marginEnd="25dp"
                         app:srcCompat="@drawable/competenceicon" />
                 </RelativeLayout>
 
@@ -121,27 +114,25 @@
                     android:layout_toEndOf="@+id/RelativeLayoutFormation">
 
                     <ProgressBar
-                        android:id="@+id/progressBarBonheur"
-                        style="?android:attr/progressBarStyleHorizontal"
+                        android:id="@+id/ProgressBarBonheur"
+                        style="@android:style/Widget.ProgressBar.Horizontal"
+                        android:progressDrawable="@drawable/custom_progress_bar_bonheur"
                         android:layout_width="90dp"
                         android:layout_height="40dp"
                         android:layout_marginStart="21dp"
-                        android:background="@color/colorProgressBarBonheur"
-                        android:backgroundTint="@color/colorBackgroundProgressBarBonheur"
-                        android:indeterminate="true"
-                        android:indeterminateTint="@color/colorProgressBarBonheur"
+                        android:indeterminate="false"
                         android:indeterminateTintMode="src_atop"
                         android:max="100"
-                        android:progress="50"/>
+                        android:progress="0"/>
 
 
                     <ImageView
                         android:id="@+id/ImageViewBonheur"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignStart="@+id/progressBarBonheur"
+                        android:layout_alignStart="@+id/ProgressBarBonheur"
                         android:layout_centerVertical="true"
-                        android:layout_marginStart="20dp"
+                        android:layout_marginStart="25dp"
                         app:srcCompat="@drawable/happinessicon" />
                 </RelativeLayout>
             </RelativeLayout>
@@ -165,7 +156,9 @@
         <RelativeLayout
             android:id="@+id/RelativeLayoutLevel"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true">
 
             <RelativeLayout
                 android:id="@+id/RelativeLayoutRessources"
@@ -175,9 +168,9 @@
                 android:layout_marginBottom="10dp">
 
                 <RelativeLayout
+                    android:id="@+id/RelativeLayoutArgent"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/RelativeLayoutArgent">
+                    android:layout_height="wrap_content">
 
                     <ImageView
                         android:id="@+id/ImageViewArgent"
@@ -196,11 +189,11 @@
                         android:layout_height="wrap_content"
                         android:layout_alignStart="@+id/ImageViewArgent"
                         android:layout_centerVertical="true"
+                        android:layout_marginLeft="10dp"
                         android:layout_marginStart="50dp"
                         android:text="1000"
-                        android:textSize="20sp"
-                        android:layout_marginLeft="10dp"
-                        android:textColor="@color/fontColor"/>
+                        android:textColor="@color/fontColor"
+                        android:textSize="20sp" />
                 </RelativeLayout>
 
                 <RelativeLayout
@@ -253,18 +246,21 @@
 
                     <ProgressBar
                         android:id="@+id/ProgressBarRessources"
-                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                        style="@android:style/Widget.ProgressBar.Horizontal"
+                        android:progressDrawable="@drawable/custom_progress_bar_ressources"
                         android:layout_width="100dp"
-                        android:layout_height="30dp"
+                        android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_toEndOf="@+id/ImageViewRessources"
-                        android:background="@color/colorBackgroundProgressBarRessource"
-                        android:backgroundTint="@color/colorBackgroundProgressBarRessource"
-                        android:indeterminate="true"
-                        android:indeterminateTint="@color/colorProgressBarRessource"
+                        android:clickable="false"
+                        android:indeterminate="false"
                         android:indeterminateTintMode="src_atop"
                         android:max="100"
-                        android:progress="50" />
+                        android:maxHeight="30dp"
+                        android:maxWidth="100dp"
+                        android:minHeight="30dp"
+                        android:minWidth="100dp"
+                        android:progress="0"/>
 
                 </RelativeLayout>
 
