Ajout du fond d'écran
Ajout du fon d'écran.
Ajout des bordures sur les progressBar.
Modification des icônes.
Ajout du nom ou du pseudo du joueur

--- a/app/src/main/res/drawable/custom_progress_bar_bonheur.xml
+++ b/app/src/main/res/drawable/custom_progress_bar_bonheur.xml
@@ -7,6 +7,10 @@
                 android:centerColor="@color/colorBackgroundProgressBarBonheur"
                 android:endColor="@color/colorBackgroundProgressBarBonheur"
                 />
+            <stroke
+                android:color="#000"
+                android:width="3dp"
+                />
         </shape>
     </item>
     <item android:id="@android:id/progress">
@@ -16,6 +20,10 @@
                     android:startColor="@color/colorProgressBarBonheur"
                     android:centerColor="@color/colorProgressBarBonheur"
                     android:endColor="@color/colorProgressBarBonheur"
+                    />
+                <stroke
+                    android:color="#000"
+                    android:width="3dp"
                     />
             </shape>
         </clip>
