Mise en place des fonctions permettant d'afficher les differents éléments

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,4 +32,5 @@
     <color name="colorVersionAntivirus">#ce871f</color>
     <color name="colorProgressBarFormationEmployes">#366821</color>
     <color name="colorBackgroundProgressBarFormationEmployes">#5a8d5b</color>
+    <color name="colorBackgroundInformation">#b9b154</color>
 </resources>
